--- a/portfolio.html
+++ b/portfolio.html
@@ -724,6 +724,86 @@ h2 {
     padding-bottom: 30px;
 }
 }
+/* CTA Section */
+.cta-section {
+  background-color: #000;
+  color: #ccc;
+  text-align: center;
+  padding: 100px 20px;
+}
+
+.cta-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.cta-container h2 {
+  color: #fff;
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 20px;
+  line-height: 1.2;
+}
+
+.cta-container p {
+  font-size: 1.1rem;
+  margin-bottom: 40px;
+}
+
+/* Buttons */
+.cta-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.btn {
+  padding: 14px 30px;
+  border-radius: 40px;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+/* Solid button */
+.btn-primary {
+  background-color: #fff;
+  color: #000;
+  border: 2px solid #fff;
+}
+
+.btn-primary:hover {
+  background-color: transparent;
+  color: #fff;
+  transform: translateY(-3px);
+}
+
+/* Outline button */
+.btn-outline {
+  background-color: transparent;
+  color: #ccc;
+  border: 2px solid #444;
+}
+
+.btn-outline:hover {
+  background-color: #fff;
+  color: #000;
+  transform: translateY(-3px);
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  .cta-container h2 {
+    font-size: 2.2rem;
+  }
+
+  .btn {
+    width: 100%;
+    text-align: center;
+  }
+}
     </style>
     <nav>
         <input type="checkbox" id="click">
@@ -859,6 +939,20 @@ h2 {
     </div>
   </div>
 </section>
+
+<section class="cta-section">
+  <div class="cta-container">
+    <h2>Ready to Join Our<br>Success Stories?</h2>
+    <p>
+      Let's create something extraordinary together. Your success story starts with a conversation.
+    </p>
+    <div class="cta-buttons">
+      <a href="contact.html" class="btn btn-primary">Start Your Project →</a>
+      <a href="login.html" class="btn btn-outline">View Our Services</a>
+    </div>
+  </div>
+</section>
+
 
     <footer>
       <p>For more of our works and services, <a href="mailto:dannyagency98@gmail.com">contact us</a></p>
