--- a/portfolio.html
+++ b/portfolio.html
@@ -844,19 +844,19 @@ h2 {
 
   <div class="websites product">
     <h2>Featured Projects</h2>
-<section>
+    <section>
+  <!-- Works Section -->
 
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#1a1a1a;">
-      <img 
-        src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" 
-        alt="heatculture Logo" 
-        loading="lazy"
-        style="filter: invert(1) brightness(2);"
-      >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
-      <h3>HEAT CULTURE</h3>   
+      <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338"
+           alt="heatculture Logo" loading="lazy"
+           style="filter: invert(1) brightness(2);">
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Fashion & Lifestyle
+      </span>
+      <h3>HEAT CULTURE</h3>
       <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
@@ -867,8 +867,8 @@ h2 {
       </div>
       <p>Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>  
-        <span class="tag">Theme Development</span>   
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
         <span class="tag">SEO</span>
       </div>
     </div>
@@ -877,9 +877,12 @@ h2 {
   <!-- SAHARAN ROCKIN -->
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#1a1a1a;">
-      <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Comic series</span>
-      <h3>SAHARAN ROCKIN</h3>    
+      <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982"
+           alt="Saharan rockin" loading="lazy">
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Comic series
+      </span>
+      <h3>SAHARAN ROCKIN</h3>
       <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2025</span>
@@ -890,24 +893,23 @@ h2 {
       </div>
       <p>A surreal Y2K-inspired manga series by Saharan Rockin Studios.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>  
-        <span class="tag">Theme Development</span>   
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
         <span class="tag">SEO</span>
       </div>
     </div>
   </a>
 
   <!-- ANOTHER STATE -->
-  <a href="https://www.anotherstate.net/" target="_blank" class="card-link hide-mobile">
-    <div class="card" style="--card-color: #1a1a1a;">
-      <img 
-        src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" 
-        alt="anotherstate" 
-        loading="lazy"
-        style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;"
-      >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
-      <h3>ANOTHER STATE</h3>  
+  <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
+    <div class="card" style="--card-color:#1a1a1a;">
+      <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990"
+           alt="anotherstate" loading="lazy"
+           style="filter: invert(1) brightness(0.9) contrast(0.8); background-color:#1a1a1a;">
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Fashion & Lifestyle
+      </span>
+      <h3>ANOTHER STATE</h3>
       <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
@@ -918,22 +920,21 @@ h2 {
       </div>
       <p>An encounter of states conveyed through garments.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>  
+        <span class="tag">Shopify</span>
         <span class="tag">Theme Development</span>
       </div>
     </div>
   </a>
 
   <!-- SUPREME BEAUTY -->
-  <a href="https://www.superemebeauty.com/" target="_blank" class="card-link hide-mobile">
-    <div class="card" style="--card-color: #1a1a1a;">
-      <img 
-        src="https://www.supremebeauty.com/cdn/shop/files/supreme-logo_340x.png?v=1614368038" 
-        alt="supreme beauty" 
-        loading="lazy"
-      >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Hair & Beauty</span>
-      <h3>SUPREME BEAUTY</h3>  
+  <a href="https://www.superemebeauty.com/" target="_blank" class="card-link">
+    <div class="card" style="--card-color:#1a1a1a;">
+      <img src="https://www.supremebeauty.com/cdn/shop/files/supreme-logo_340x.png?v=1614368038"
+           alt="supreme beauty" loading="lazy">
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Hair & Beauty
+      </span>
+      <h3>SUPREME BEAUTY</h3>
       <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2023</span>
@@ -944,9 +945,9 @@ h2 {
       </div>
       <p>Huge online selection of beauty essentials.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>  
-        <span class="tag">Theme Development</span> 
-        <span class="tag">Speed Optimization</span> 
+        <span class="tag">Shopify</span>
+        <span class="tag">Theme Development</span>
+        <span class="tag">Speed Optimization</span>
         <span class="tag">SEO</span>
       </div>
     </div>
@@ -954,15 +955,13 @@ h2 {
 
   <!-- CHAOS THEORY -->
   <a href="https://www.peaceinchaos.in/" target="_blank" class="card-link">
-    <div class="card" style="--card-color: #1a1a1a;">
-      <img 
-        src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400" 
-        alt="chaos theory" 
-        loading="lazy"
-        style="height: 150px;"
-      >
-      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
-      <h3>CHAOS THEORY</h3>  
+    <div class="card" style="--card-color:#1a1a1a;">
+      <img src="https://www.peaceinchaos.in/cdn/shop/files/Final_Logo_copy.png?v=1739768400"
+           alt="chaos theory" loading="lazy" style="height: 150px;">
+      <span class="tag" style="background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">
+        Fashion & Lifestyle
+      </span>
+      <h3>CHOAS THEORY</h3>
       <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2025</span>
@@ -973,63 +972,25 @@ h2 {
       </div>
       <p>The Butterfly Effect reminding you that even the smallest actions can cause ripples of impact across the world.</p>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <span class="tag">Shopify</span>  
+        <span class="tag">Shopify</span>
         <span class="tag">Theme Development</span>
       </div>
     </div>
   </a>
 
-  <!-- +6 MORE PROJECTS -->
-  <div class="plus">
+  <div class="plus"
+       style="flex: 1 1 calc(23.333% - 2em); border-radius: 1em; padding: 1.5em; width: 320px; display: flex; flex-direction: column; align-items: flex-start; box-shadow: 0 4px 10px rgba(0,0,0,0.05); transition: transform 0.3s ease, box-shadow 0.3s ease; border: 1px solid #ccc; background-color: #1a1a1a; color: white; height: auto; display: flex; align-items: center; justify-content: center; font-family: inherit; font-size: 20px;">
     + 6 more projects
   </div>
 
+  <style>
+    .plus:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 8px 2px rgba(200, 200, 200, 0.4),
+                  0 0 15px 8px rgba(200, 200, 200, 0.2);
+    }
+  </style>
 </section>
-
-<style>
-  .plus {
-    flex: 1 1 calc(23.333% - 2em);
-    border-radius: 1em;
-    padding: 1.5em;
-    width: 320px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #1a1a1a;
-    color: white;
-    font-family: inherit;
-    font-size: 20px;
-    border: 1px solid #ccc;
-    height: 400px; /* 🔥 Match other cards */
-    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-
-  .plus:hover {
-    transform: translateY(-5px);
-    box-shadow: 
-      0 0 8px 2px rgba(200, 200, 200, 0.4), 
-      0 0 15px 8px rgba(200, 200, 200, 0.2);
-  }
-
-  @media (max-width: 768px) {
-    .card {
-      flex: 1 1 calc(100% - 2em);
-      height: auto;
-    }
-
-    .plus {
-      height: auto; /* make it fluid on mobile */
-      width: 100%;
-    }
-
-    .hide-mobile {
-      display: none !important; /* completely hide full cards */
-    }
-  }
-</style>
-
-
 
 <section class="impact-section">
   <div class="container">
@@ -1229,6 +1190,30 @@ window.addEventListener('load', () => {
     document.body.style.visibility = "visible";
   });
 </script>
+<script>
+  // Wait for the page to load
+  document.addEventListener("DOMContentLoaded", function() {
+    // Check if screen width is 768px or smaller (mobile)
+    if (window.innerWidth <= 768) {
+      // Select all card links
+      const cards = document.querySelectorAll(".card-link");
+
+      cards.forEach(card => {
+        // Get the title of the card
+        const titleElement = card.querySelector("h3");
+        if (!titleElement) return;
+
+        const title = titleElement.textContent.trim();
+
+        // Hide specific cards on mobile
+        if (title === "ANOTHER STATE" || title === "SUPREME BEAUTY") {
+          card.style.display = "none";
+        }
+      });
+    }
+  });
+</script>
+
 
 </body>
 
